# sparkling-water

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  OPENROUTER_SETUP.md  POWERSHELL_USAGE.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  temp_test.py  test_edit_bug.py  test_sw.py
sparkling_water/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
sparkling_water/cli/: __init__.py  interactive.py  main.py
sparkling_water/core/: __init__.py  ast_transformer.py  code_editor.py  project.py
sparkling_water/events/: __init__.py  event_bus.py
sparkling_water/graph/: __init__.py  knowledge_graph.py
sparkling_water/providers/: __init__.py  base.py  claude.py  gemini.py  kilocode.py  manager.py  nvidia.py  openai.py  opencode.py  openrouter.py
sparkling_water/router/: __init__.py  slm_router.py  tools.py
sparkling_water/tests/: test_components.py
sparkling_water/tui/: app.py
sparkling_water/vfs/: __init__.py  virtual_filesystem.py
